[package]
name = "markdown-toc"
version = "0.2.0"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
description = "Markdown Table of Contents generator"
license = "MIT"
repository = "https://github.com/pbzweihander/markdown-toc"
readme = "README.md"
keywords = ["markdown"]

[[bin]]
name = "md-toc"
path = "src/main.rs"

[dependencies]
getopts = "0.2"
percent-encoding = "2.1"
